- Fix Join APA Popups - Fix Join APA layout issues

--- a/themes/evolve/lessc/Dashboard.less
+++ b/themes/evolve/lessc/Dashboard.less
@@ -336,13 +336,12 @@ div[aria-describedby="deleteCardWindow"] .ui-widget-header{
 div[aria-describedby="deleteCardWindow"] .ui-dialog-content{
     overflow:hidden!important;
 }
-div[aria-describedby="privacypolicyWindow"].ui-dialog {
+div[aria-describedby="privacypolicyWindow"].ui-dialog, 
+div[aria-describedby="installmentpolicyWindow"].ui-dialog {
     z-index: 1050 !important;
     width: 50%!important;
-    max-height: 600px!important;
-    overflow-y: scroll!important;
+    overflow-y: hidden!important;
     position: fixed!important;
-    display: block!important;
     top: 20%!important;
     left: 25%!important;
     @media all and (max-width: @tablet-width) {
@@ -353,7 +352,6 @@ div[aria-describedby="privacypolicyWindow"].ui-dialog {
         width: 80%!important;
         left: 10%!important;
         top: 15%!important;
-        max-height: 300px!important;
     }
 }
 div[aria-describedby="privacypolicyWindow"] .ui-widget-header{
@@ -361,13 +359,6 @@ div[aria-describedby="privacypolicyWindow"] .ui-widget-header{
 	background:white!important;
 }
 
-div[aria-describedby="installmentpolicyWindow"].ui-dialog {
-    z-index: 1050!important;
-    left: 23%!important;
-	top: 51%!important;
-	width: 673px!important;
-	
-}
 div[aria-describedby="installmentpolicyWindow"] .ui-widget-header{
     border:none!important;
 	background:white!important;
@@ -2109,7 +2100,6 @@ form{
           position: relative;
           cursor: pointer;
           padding: 0;
-          display: flex;
         }
       
         // Box.
@@ -2119,6 +2109,7 @@ form{
           display: inline-block;
           vertical-align: text-top;
           width: 20px;
+          min-width: 20px;
           height: 20px;
           background: none;
           box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.12);
@@ -2255,6 +2246,7 @@ form{
                   display: inline-block;
                   vertical-align: text-top;
                   width: 20px;
+                  min-width: 20px;
                   height: 20px;
                   background: none;
                   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.12);
@@ -2364,6 +2356,7 @@ form{
         .chosen-container{
             position: relative;
             .chosen-choices{
+                border: 1px solid #ccc;
                 position: relative;
                 z-index: 1;
             }
@@ -2535,3 +2528,86 @@ form{
         background: #fff;
     }
  }
+
+ //POLICY POPUPS
+
+ #privacypolicyWindow, #installmentpolicyWindow{
+     max-height: 600px!important;
+     @media all and (max-width: @larger-phone-width){
+         max-height: 300px!important;
+     }
+    .styled-checkbox {
+        position: absolute; // take it out of document flow
+        opacity: 0; // hide it
+      
+        & + label {
+          position: relative;
+          cursor: pointer;
+          padding: 0;
+          display: flex;
+        }
+      
+        // Box.
+        & + label:before {
+          content: '';
+          margin-right: 20px;
+          display: inline-block;
+          vertical-align: text-top;
+          width: 20px;
+          min-width: 20px;
+          height: 20px;
+          background: none;
+          box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.12);
+        }
+      
+        // Box hover
+        &:hover + label:before {
+          background: none;
+        }
+      
+        // Box checked
+        &:checked + label:before {
+          background: none;
+        }
+        
+        // Disabled state label.
+        &:disabled + label {
+          color: #b8b8b8;
+          cursor: auto;
+        }
+      
+        // Disabled box.
+        &:disabled + label:before {
+          box-shadow: none;
+          background: #fff;
+        }
+      
+        // Checkmark. Could be replaced with an image
+        &:checked + label:after {
+          content: '';
+          position: absolute;
+          left: 5px;
+          top: 10px;
+          background: #000;
+          width: 2px;
+          height: 2px;
+          box-shadow: 
+            2px 0 0 #000,
+            4px 0 0 #000,
+            4px -2px 0 #000,
+            4px -4px 0 #000,
+            4px -6px 0 #000,
+            4px -8px 0 #000;
+          transform: rotate(45deg);
+        }
+      }
+ }
+ 
+ .dexp-body-inner{
+    #section-content-top{
+        @media all and (max-width: @tablet-width) {
+            padding: 0;
+        }
+    }
+ }
+ 
