--- a/themes/evolve/lessc/PD/PDshopping.less
+++ b/themes/evolve/lessc/PD/PDshopping.less
@@ -257,6 +257,7 @@ fieldset {
           position: relative;
           cursor: pointer;
           padding: 0;
+          display: flex;
         }
       
         // Box.
@@ -266,6 +267,7 @@ fieldset {
           display: inline-block;
           vertical-align: text-top;
           width: 20px;
+          min-width: 20px;
           height: 20px;
           background: none;
           box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.12);
