--- a/themes/evolve/lessc/elements.less
+++ b/themes/evolve/lessc/elements.less
@@ -19,6 +19,7 @@
       position: relative;
       cursor: pointer;
       padding: 0;
+      display: flex;
     }
   
     // Box.
@@ -28,6 +29,7 @@
       display: inline-block;
       vertical-align: text-top;
       width: 20px;
+      min-width: 20px;
       height: 20px;
       background: none;
       box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.12);
@@ -186,6 +188,7 @@
     display: inline-block;
     vertical-align: text-top;
     width: 20px;
+    min-width: 20px;
     height: 20px;
     background: none;
     box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.12);
@@ -296,6 +299,7 @@
       display: inline-block;
       vertical-align: text-top;
       width: 20px;
+      min-width: 20px;
       height: 20px;
       background: none;
       box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.12);
